Initial Dr result display (js/frontend/search-interface.js)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BetterDoctor Search</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <h2>Hello My BetterDoctor Search</h2>
       <div class="row">
 
