--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
   </head>
   <body>
     <div class="container-fluid">
-      <h2>Hello My BetterDoctor Search</h2>
+      <h2>BetterDoctor API Search</h2>
       <div class="row">
 
         <div class="col-md-4">
-          <h4>Search Form to Appear Here</h4>
+          <form id="drSearch">
+            <div class="form-group">
+              <!-- <label for="drFirstName">Dr. First Name</label>
+              <input id="drFirstName" class="form-control" type="text">
+              <label for="drLastName">Dr. Last Name</span></label>
+              <input id="drLastName" class="form-control" type="text">
+              <label for="medicalIssue">Medical Issue</label>
+              <input id="medicalIssue" class="form-control" type="text"> -->
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+
+
         </div> <!-- End Col -->
 
         <div id="searchOutput" class="col-md-8">
-          <h4>Search Results Appear Here</h4>
         </div>  <!-- End Col -->
 
       </div> <!-- End Row -->
