--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="col-md-4">
           <form id="drSearch">
             <div class="form-group">
-              <!-- <label for="drFirstName">Dr. First Name</label>
+              <label for="drFirstName">Dr. First Name</label>
               <input id="drFirstName" class="form-control" type="text">
               <label for="drLastName">Dr. Last Name</span></label>
               <input id="drLastName" class="form-control" type="text">
               <label for="medicalIssue">Medical Issue</label>
-              <input id="medicalIssue" class="form-control" type="text"> -->
+              <input id="medicalIssue" class="form-control" type="text">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
