Add location search (index.html, js/frontend/search-interface.js)

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <div class="col-md-4">
           <form id="drSearch">
             <div class="form-group">
-              <label for="drFirstName">Dr. First Name</label>
-              <input id="drFirstName" class="form-control" type="text">
-              <label for="drLastName">Dr. Last Name</span></label>
-              <input id="drLastName" class="form-control" type="text">
-              <label for="medicalIssue">Medical Issue</label>
-              <input id="medicalIssue" class="form-control" type="text">
+              <label for="drName">Dr. Name (First and/or Last including partial matches)</label>
+              <input id="drName" class="form-control" type="text" placeholder="J Sm (for John or Jonathan Smith or Smythe)">
+              <label for="drCity">City</span></label>
+              <input id="drCity" class="form-control" type="text" placeholder="Portland">
+              <label for="drState">Two Letter State Code</span></label>
+              <input id="drState" class="form-control" type="text" placeholder="OR">
+              <label for="medicalIssue">Medical Need</label>
+              <input id="medicalIssue" class="form-control" type="text" placeholder="dentist">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
